Manage multiple Sources via settings menu. Part 10. Compile and run.

--- a/constants.gradle
+++ b/constants.gradle
@@ -3,6 +3,7 @@
  */
 project.ext {
 
+    javaVersion = JavaVersion.VERSION_1_8
     /**
      * Build and compile constants
      */
@@ -65,7 +66,7 @@ project.ext {
      * Application constants
      */
     applicationId = "com.yuriy.openradio"
-    versionName = "10.0"
+    versionName = "11.0"
     versionCode = 0
 
     /**
