--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
         </receiver>
 
         <service
-            android:name=".shared.service.LocationService"
+            android:name=".shared.service.location.LocationService"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:stopWithTask="true" />
