Update gradle dependencies

--- a/automotive/build.gradle
+++ b/automotive/build.gradle
@@ -8,8 +8,7 @@ apply from: "../constants.gradle"
 apply from: "../sign.gradle"
 
 android {
-    compileSdkVersion project.ext.compileSdkVersion
-    buildToolsVersion project.ext.buildToolsVersion
+    compileSdk project.ext.compileSdkVersion
 
     defaultConfig {
         applicationId project.ext.applicationId
