--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
     }
 }
 
+plugins {
+    id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
+}
+
 allprojects {
 
     repositories {
@@ -23,6 +27,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
