--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -1,12 +1,10 @@
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 apply plugin: "com.google.gms.google-services"
-apply plugin: "kotlin-kapt"
 apply from: "../constants.gradle"
 
 android {
-    compileSdkVersion project.ext.compileSdkVersion
-    buildToolsVersion project.ext.buildToolsVersion
+    compileSdk project.ext.compileSdkVersion
     defaultConfig {
         minSdkVersion project.ext.minSdkVersion
         targetSdkVersion project.ext.targetSdkVersion
