--- a/common/build.gradle
+++ b/common/build.gradle
@@ -70,12 +70,13 @@ dependencies {
     }
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinxCoroutinesAndroid"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesCore"
-    api "com.google.android.exoplayer:exoplayer-core:$exoPlayerVersion"
-    api "com.google.android.exoplayer:exoplayer-hls:$exoPlayerVersion"
-    api "com.google.android.exoplayer:exoplayer-dash:$exoPlayerVersion"
-    api "com.google.android.exoplayer:exoplayer-ui:$exoPlayerVersion"
-    api "com.google.android.exoplayer:extension-cast:$exoPlayerVersion"
-    api "com.google.android.exoplayer:extension-mediasession:$exoPlayerVersion"
+    api "androidx.media3:media3-exoplayer:1.0.2"
+    api "androidx.media3:media3-exoplayer-hls:1.0.2"
+    api "androidx.media3:media3-exoplayer-dash:1.0.2"
+    api "androidx.media3:media3-ui:1.0.2"
+    api "androidx.media3:media3-cast:1.0.2"
+    api "com.google.android.exoplayer:extension-mediasession:2.18.7"
+    implementation "androidx.media3:media3-session:1.0.2"
     implementation "com.google.android.gms:play-services-location:$googlePlayServicesLocationVersion"
     api "com.google.http-client:google-http-client-gson:$googleHttpClientGsonVersion"
     api("com.google.api-client:google-api-client-android:$googleApiClientAndroidVersion") {
