Make notify children work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply from: "../constants.gradle"
 apply from: "../sign.gradle"
 
 android {
+    namespace = "com.yuriy.openradio.mobile"
     compileSdk project.ext.compileSdkVersion
 
     defaultConfig {
