--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -8,6 +8,7 @@ apply from: "../constants.gradle"
 apply from: "../sign.gradle"
 
 android {
+    namespace = "com.yuriy.openradio.tv"
     compileSdk project.ext.compileSdkVersion
 
     defaultConfig {
