--- a/automotive/src/main/AndroidManifest.xml
+++ b/automotive/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.yuriy.openradio.automotive" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.type.automotive"
@@ -23,7 +22,7 @@
     </queries>
 
     <application
-        tools:replace="android:name"
+        android:name=".MainAppAutomotive"
         android:allowBackup="true"
         android:appCategory="audio"
         android:fullBackupContent="true"
@@ -31,13 +30,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MainAppAutomotive" >
+        tools:replace="android:name">
 
         <activity
             android:name=".ui.AutomotiveSettingsActivity"
             android:exported="true"
-            android:theme="@style/Theme.Automotive"
-            android:label="Settings">
+            android:label="Settings"
+            android:theme="@style/Theme.Automotive">
             <intent-filter>
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
             </intent-filter>
@@ -59,7 +58,7 @@
             tools:ignore="ExportedService">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
-                <action android:name="androidx.media3.session.MediaLibraryService"/>
+                <action android:name="androidx.media3.session.MediaLibraryService" />
             </intent-filter>
         </service>
 
