--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -4,6 +4,7 @@ apply plugin: "com.google.gms.google-services"
 apply from: "../constants.gradle"
 
 android {
+    namespace = "com.yuriy.openradio.shared"
     compileSdk project.ext.compileSdkVersion
     defaultConfig {
         minSdkVersion project.ext.minSdkVersion
