--- a/constants.gradle
+++ b/constants.gradle
@@ -3,6 +3,7 @@
  */
 project.ext {
 
+    namespace = "com.yuriy.openradio"
     javaVersion = JavaVersion.VERSION_1_8
     /**
      * Build and compile constants
@@ -16,17 +17,17 @@ project.ext {
     /**
      * Kotlin versions
      */
-    kotlinVersion = "1.8.10"
+    kotlinVersion = "1.9.0"
     kotlinCoreKtx = "1.10.1"
     kotlinActivityKtx = "1.7.2"
     kotlinxCoroutinesCore = "1.3.8"
-    kotlinxCoroutinesAndroid = "1.7.1"
+    kotlinxCoroutinesAndroid = "1.7.2"
     kotlinJvmTarget = "1.8"
 
     /**
      * Libraries versions
      */
-    gradleVersion = "7.4.2"
+    gradleVersion = "8.1.0"
     appcompatVersion = "1.3.1"
     materialVersion = "1.9.0"
     googlePlayServicesDriveVersion = "17.0.0"
