Add more logs to empty media id. Change gradle properties to fit Java 17

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX\:MaxPermSize\=512m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 #org.gradle.unsafe.configuration-cache=true
