--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     api "androidx.constraintlayout:constraintlayout:$constraintlayoutAndroidXVersion"
     api "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
     api "com.google.android.gms:play-services-auth:$googlePlayServicesAuthVersion"
-    implementation "com.google.android.gms:play-services-drive:$googlePlayServicesDriveVersion"
-    implementation "com.sun.mail:android-mail:$androidMailVersion"
+    api "com.google.android.gms:play-services-drive:$googlePlayServicesDriveVersion"
+    api "com.sun.mail:android-mail:$androidMailVersion"
 }
