--- a/common/build.gradle
+++ b/common/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinxCoroutinesAndroid"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesCore"
     api "androidx.media3:media3-exoplayer:1.1.1"
+    api "androidx.media3:media3-datasource:1.1.1"
     api "androidx.media3:media3-exoplayer-hls:1.1.1"
     api "androidx.media3:media3-exoplayer-dash:1.1.1"
     api "androidx.media3:media3-ui:1.1.1"
