--- a/common/build.gradle
+++ b/common/build.gradle
@@ -71,13 +71,13 @@ dependencies {
     }
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinxCoroutinesAndroid"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesCore"
-    api "androidx.media3:media3-exoplayer:1.1.1"
-    api "androidx.media3:media3-datasource:1.1.1"
-    api "androidx.media3:media3-exoplayer-hls:1.1.1"
-    api "androidx.media3:media3-exoplayer-dash:1.1.1"
-    api "androidx.media3:media3-ui:1.1.1"
-    api "androidx.media3:media3-cast:1.1.1"
-    api "androidx.media3:media3-session:1.1.1"
+    api "androidx.media3:media3-exoplayer:$media3Version"
+    api "androidx.media3:media3-datasource:$media3Version"
+    api "androidx.media3:media3-exoplayer-hls:$media3Version"
+    api "androidx.media3:media3-exoplayer-dash:$media3Version"
+    api "androidx.media3:media3-ui:$media3Version"
+    api "androidx.media3:media3-cast:$media3Version"
+    api "androidx.media3:media3-session:$media3Version"
     api "com.google.android.gms:play-services-location:$googlePlayServicesLocationVersion"
     api "com.google.http-client:google-http-client-gson:$googleHttpClientGsonVersion"
     api("com.google.api-client:google-api-client-android:$googleApiClientAndroidVersion") {
