--- a/constants.gradle
+++ b/constants.gradle
@@ -17,7 +17,7 @@ project.ext {
     /**
      * Kotlin versions
      */
-    kotlinVersion = "1.9.0"
+    kotlinVersion = "1.9.10"
     kotlinCoreKtx = "1.12.0"
     kotlinActivityKtx = "1.8.0"
     kotlinxCoroutinesCore = "1.3.8"
@@ -27,13 +27,16 @@ project.ext {
     /**
      * Libraries versions
      */
-    gradleVersion = "8.1.0"
+    gradleVersion = "8.1.2"
     appcompatVersion = "1.3.1"
-    materialVersion = "1.9.0"
+    materialVersion = "1.10.0"
     googlePlayServicesDriveVersion = "17.0.0"
     googlePlayServicesAuthVersion = "20.7.0"
     googlePlayServicesLocationVersion = "21.0.1"
     googlePlayServicesCronet = "17.0.1"
+    // Newer version throws:
+    // IllegalStateException: Default FirebaseApp is not initialized in this process com.yuriy.openradio.
+    // Make sure to call FirebaseApp.initializeApp(Context) first.
     googleServices = "4.3.15"
     constraintLayoutVersion = "1.1.3"
     junitVersion = "4.13.2"
