Fix GDrive downloaded parsing

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -53,6 +53,10 @@ android {
             exclude group: "org.apache.httpcomponents"
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
