Add Logging layer

--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     api "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
     api "com.google.android.gms:play-services-auth:$googlePlayServicesAuthVersion"
     api "com.google.android.gms:play-services-drive:$googlePlayServicesDriveVersion"
+    // https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail
+    api "com.sun.mail:jakarta.mail:2.0.1"
 }
