--- a/constants.gradle
+++ b/constants.gradle
@@ -50,17 +50,16 @@ project.ext {
     jdom2Version = "2.0.6"
     googleHttpClientGsonVersion = "1.26.0"
     googleApiClientAndroidVersion = "2.2.0"
-    googleApiServicesDrive = "v3-rev197-1.25.0"
     countryboundariesVersion = "1.5"
     androidxMediaVersion = "1.6.0"
     fragmentKtxVersion = "1.6.1"
-    roomVersion = "2.5.2"
+    roomVersion = "2.6.0"
     exifinterfaceVersion = "1.3.6"
     constraintlayoutAndroidXVersion = "2.1.4"
     preferenceKtxVersion = "1.2.1"
     localbroadcastmanagerVersion = "1.1.0"
     workVersion = "2.8.1"
-    media3Version = "1.2.0-alpha02"
+    media3Version = "1.2.0-beta01"
     okhttp3Version = "4.12.0"
 
     /**
