--- a/constants.gradle
+++ b/constants.gradle
@@ -30,44 +30,38 @@ project.ext {
     gradleVersion = "8.1.2"
     appcompatVersion = "1.3.1"
     materialVersion = "1.10.0"
-    googlePlayServicesDriveVersion = "17.0.0"
-    googlePlayServicesAuthVersion = "20.7.0"
+    googleServices = "4.4.0"
     googlePlayServicesLocationVersion = "21.0.1"
-    googlePlayServicesCronet = "17.0.1"
-    // Newer version throws:
-    // IllegalStateException: Default FirebaseApp is not initialized in this process com.yuriy.openradio.
-    // Make sure to call FirebaseApp.initializeApp(Context) first.
-    googleServices = "4.3.15"
     constraintLayoutVersion = "1.1.3"
-    junitVersion = "4.13.2"
-    junitAndroidXVersion = "1.1.5"
-    espressoVersion = "3.1.0"
-    // https://mvnrepository.com/artifact/org.json/json
-    jsonTestVersion = "20230618"
-    exoPlayerVersion = "2.18.7"
     multidexVersion = "1.0.3"
     leanbackVersion = "1.0.0"
     jdom2Version = "2.0.6"
-    googleHttpClientGsonVersion = "1.26.0"
-    googleApiClientAndroidVersion = "2.2.0"
-    countryboundariesVersion = "1.5"
+    countryboundariesVersion = "2.1"
     androidxMediaVersion = "1.6.0"
-    fragmentKtxVersion = "1.6.1"
+    fragmentKtxVersion = "1.6.2"
     roomVersion = "2.6.0"
     exifinterfaceVersion = "1.3.6"
     constraintlayoutAndroidXVersion = "2.1.4"
     preferenceKtxVersion = "1.2.1"
-    localbroadcastmanagerVersion = "1.1.0"
     workVersion = "2.8.1"
-    media3Version = "1.2.0-beta01"
+    media3Version = "1.2.0-rc01"
     // Seems like this is max version that supports Android 17
     okhttp3Version = "3.12.13"
+
+    /**
+     * Test Libraries versions
+     */
+    // https://mvnrepository.com/artifact/org.json/json
+    jsonTestVersion = "20230618"
+    junitVersion = "4.13.2"
+    junitAndroidXVersion = "1.1.5"
+    espressoVersion = "3.1.0"
 
     /**
      * Application constants
      */
     applicationId = "com.yuriy.openradio"
-    versionName = "14.0.1"
+    versionName = "14.0.3"
     versionCode = 0
 
     /**
