--- a/automotive/build.gradle
+++ b/automotive/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     implementation project(':common')
     implementation project(':common-ui')
 
-    api "androidx.preference:preference-ktx:$preferenceKtxVersion"
+    implementation "androidx.preference:preference-ktx:$preferenceKtxVersion"
 }
