--- a/constants.gradle
+++ b/constants.gradle
@@ -19,7 +19,7 @@ project.ext {
      */
     kotlinVersion = "1.9.10"
     kotlinCoreKtx = "1.12.0"
-    kotlinActivityKtx = "1.8.0"
+    kotlinActivityKtx = "1.8.1"
     kotlinxCoroutinesCore = "1.3.8"
     kotlinxCoroutinesAndroid = "1.7.2"
     kotlinJvmTarget = "1.8"
@@ -44,7 +44,7 @@ project.ext {
     constraintlayoutAndroidXVersion = "2.1.4"
     preferenceKtxVersion = "1.2.1"
     workVersion = "2.8.1"
-    media3Version = "1.2.0-rc01"
+    media3Version = "1.2.0"
     // Seems like this is max version that supports Android 17
     okhttp3Version = "3.12.13"
 
@@ -61,7 +61,7 @@ project.ext {
      * Application constants
      */
     applicationId = "com.yuriy.openradio"
-    versionName = "14.0.5"
+    versionName = "14.1.0"
     versionCode = 0
 
     /**
